# noise-sched

./: .gitignore  .gitingnore  .gitmodules  ENVIRONMENT.md  Makefile  README.md  REPRODUCIBILITY.md  pyproject.toml  pytest.ini
configs/: baseline.yaml
configs/study/: E1_baseline_linear_10k.yaml  E2_baseline_cosine_10k.yaml  baseline_test.yaml
configs/study/E3/: E3_test.yaml  E3a-linear-nfe10.yaml  E3b-linear-nfe20.yaml  E3c-linear-nfe50.yaml
configs/study/E4/: E4a-linear-nfe10.yaml  E4b-linear-nfe20.yaml  E4c-linear-nfe50.yaml
configs/study/E5/: E5_baseline_cosine_10k.yaml
configs/study/E6/: E6_sampler_parity_cosine_ddim_10k.yaml  E6_sampler_parity_linear_ddim_10k.yaml
configs/study/E7/: E7_linear_50k.yaml
docs/assets/E1/: results.jsonl
docs/assets/E3/: nfe_fid_linear.csv
docs/prereg/: E1_prereg.md  E2_prereg.md  E3_prereg.md  E4_prereg.md  E5_prereg.md  E6_prereg.md  E7_prereg.md
docs/reports/: E1_report.md  E2_report.md  E3_report.md  E4_report.md  E5_report.md  E6_report.md  E7_report.md
prereg/: E1.md
runs/diffusion_10k/: plan.json
scripts/: eval_holdout.py  run_baseline.py
src/adapters/: noise_sched_adapter.py
src/noise_sched.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cli_study_diffusion_final.py  test_schedule_shapes.py
tools/: eval_fid_from_ckpt.py  plot_and_log_schedules.py  plot_e6_heatmap.py  plot_grids_together.py  plot_loss_fid.py  plot_nfe_fid.py  plot_sched_and_loss.py  stack_grids_from_pngs.py
tools/nfe_fid/: cli.py  montage.py  plot.py  progression.py  utils.py
(+138 files in other folders)
